# rotary

./: dummy_data.sql  main.py  pyproject.toml  test.db
backend/: main.py  test.db
backend/src/api/: api.py  members.py
backend/src/database/: models.py
backend/src/events/: events.py
backend/src/storage/: storage.py  upload.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.ts  main.tsx  style.css
frontend/src/components/: Card.tsx  Footer.tsx  MemberNavbar.tsx  Navbar.tsx  ProfileTab.tsx  ProtectedRoute.tsx
frontend/src/pages/: AdminDashboardPage.tsx  HomePage.tsx  LoginPage.tsx  MemberDashboardPage.tsx  RegisterPage.tsx
src/api/: api.py  auth.py  members.py
src/auth/: login.py  public_user.py  token.py
src/database/: __init__.py  database.py  models.py
src/events/: events.py  schemas.py
src/financial/: financial.py  schemas.py
src/management/: management.py  schemas.py
